# million-agent-test

./: README.md  main.py  output_Москва.csv  output_Санкт-Петербург.csv  pyproject.toml
