[tool.poetry]
name = "miilion-agents-test"
version = "0.1.0"
description = ""
authors = ["Egor Sidorov <sidorov.egor.main@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
